tests/language_tests/pass/0110_modulo_with_unary.ee
fn main() {
    println(-10 % 3);
    println(10 % -3);
}
