tests/language_tests/fail/0064_modulo_by_zero.ee
fn main() {
    print(10 % 0);
}
